feat(release): Implement semantic-release configuration and GitHub Actions for automated releases
- Added `release.config.mjs` to configure semantic-release for automated versioning and changelog updates.
- Created GitHub Actions workflow in `.github/workflows/release.yml` to trigger releases on pushes to the `main` branch.
- Updated documentation to include a new section on release automation and troubleshooting for semantic-release.
- Enhanced `CHANGELOG.md` management and GitHub release creation through the new configuration.

--- a/frontend/.npmrc
+++ b/frontend/.npmrc
@@ -1,8 +1,5 @@
+# Hoist specific packages to root node_modules for compatibility
+# sharp: Required by Next.js for image optimization
 public-hoist-pattern[]=*sharp*
+# @tailwindcss/oxide: Required by @tailwindcss/postcss (Tailwind CSS v4)
 public-hoist-pattern[]=*@tailwindcss/oxide*
-public-hoist-pattern[]=*unrs-resolver*
-enable-pre-post-scripts=true
-
-# Resolve peer dependency issues
-dedupe-peer-dependents=true
-strict-peer-dependencies=false
