--- a/frontend/package.json
+++ b/frontend/package.json
@@ -147,6 +147,7 @@
     "@vitest/coverage-v8": "^4.0.14",
     "@vitest/ui": "^4.0.14",
     "babel-plugin-react-compiler": "^1.0.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "jose": "^6.1.2",
     "jscodeshift": "^17.3.0",
     "jsdom": "^27.2.0",
