--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,4 +34,5 @@ jobs:
         working-directory: frontend
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_BOT_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release --extends ../release.config.mjs
