--- a/.gitignore
+++ b/.gitignore
@@ -287,6 +287,7 @@ docs/prompts/
 docs/review/
 docs/implementation/
 docs/specs/migrations/
+docs/migrations/
 
 # Frontend workspace (consolidated from frontend/.gitignore)
 next-env.d.ts
