docs: update development guide and architecture documentation
- Added a new `development-guide.md` to provide an overview of TripSage development patterns and architecture.
- Revised `index.md` to include updated links to the new development guide and improved descriptions for existing documentation.
- Introduced a new `database.md` file detailing the architecture and design of the TripSage database, including integration patterns and data flows.
- Removed obsolete files related to Supabase integration and operations to streamline documentation.
- Enhanced clarity and consistency across documentation by ensuring all references are up-to-date and correctly linked.

--- a/.gitignore
+++ b/.gitignore
@@ -278,6 +278,7 @@ scan-results/
 .env.staging.local
 
 # Project specific files
+!docs/development/development-guide.md
 .agent/
 supabase/.temp/
 docs/prompts/database-provider-research
