--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8",
-    "test:benchmark": "npx tsx scripts/benchmark-tests.ts",
+    "test:benchmark": "node scripts/run-benchmark.mjs",
     "test:quick": "vitest run --reporter=dot",
     "test:ci": "vitest run --pool=threads --maxWorkers=2 --reporter=dot",
     "test:dev-fast": "vitest --pool=threads --maxWorkers=50% --reporter=default",
@@ -33,15 +33,13 @@
     "test:merge": "vitest run --merge-reports",
     "test:e2e": "playwright test",
     "ops": "tsx scripts/ops.ts",
-    "boundary:check": "node ../scripts/check-boundaries.js",
-    "codemod:ai-route:dry": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts -d -p",
-    "codemod:ai-route": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts",
-    "codemod:ai-messages:dry": "npx jscodeshift -t ../scripts/codemods/ai-chat-messages-convert.js \"src/app/**/route.ts\" --parser=ts -d -p",
-    "codemod:ai-messages": "npx jscodeshift -t ../scripts/codemods/ai-chat-messages-convert.js \"src/app/**/route.ts\" --parser=ts",
-    "codemod:tests-env:dry": "npx jscodeshift -t ../scripts/codemods/tests-env-stub.js \"src/**/*.{test.ts,test.tsx}\" --parser=ts -d -p",
-    "codemod:tests-env": "npx jscodeshift -t ../scripts/codemods/tests-env-stub.js \"src/**/*.{test.ts,test.tsx}\" --parser=ts",
-    "codemod:validate": "pnpm biome:fix && pnpm type-check && pnpm test:run",
-    "codemod:check-idempotency": "pnpm codemod:ai-route:dry && pnpm codemod:ai-messages:dry && pnpm codemod:tests-env:dry && git diff --quiet"
+    "ops:infra:supabase": "pnpm ops infra check supabase",
+    "ops:infra:upstash": "pnpm ops infra check upstash",
+    "ops:ai:config": "pnpm ops ai check config",
+    "ops:check": "pnpm ops check all",
+    "test:analyze": "pnpm ops test analyze failures",
+    "test:analyze:all": "pnpm ops test analyze all",
+    "boundary:check": "node scripts/check-boundaries.mjs"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "3.0.0-beta.60",
