--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,11 +66,11 @@ jobs:
 
       - name: Biome check (src + e2e + scripts)
         working-directory: frontend
-        run: npx biome check ./src ./e2e ./scripts --reporter=github
+        run: pnpm biome:check -- --reporter=github
 
       - name: TypeScript type check
         working-directory: frontend
-        run: npx tsc --noEmit
+        run: pnpm type-check
 
       - name: Unit tests (quick, no coverage)
         working-directory: frontend
@@ -82,6 +82,18 @@ jobs:
         working-directory: frontend
         continue-on-error: true
         run: pnpm test:benchmark || true
+
+      - name: Analyze test failures
+        if: failure()
+        working-directory: frontend
+        continue-on-error: true
+        run: |
+          echo "## Test Failure Analysis" >> $GITHUB_STEP_SUMMARY
+          if [ -f .vitest-reports/vitest-report.json ]; then
+            pnpm test:analyze 2>&1 | head -100 >> $GITHUB_STEP_SUMMARY || true
+          else
+            echo "No test report found - run pnpm test:benchmark first" >> $GITHUB_STEP_SUMMARY
+          fi
 
       - name: Upload benchmark results
         if: always()
