chore: update .gitignore to streamline file tracking
- Removed obsolete entries related to temporary scripts, logs, and documentation artifacts to simplify the project structure.
- Added new patterns for generated files and reports, enhancing the clarity of ignored files and improving overall project organization.

--- a/.gitignore
+++ b/.gitignore
@@ -33,17 +33,14 @@ Thumbs.db
 .claude/
 **/.claude/settings.local.json
 *.local.md
-CLAUDE.local.md
 .cursorindexingignore
 
 # repomix
 repomix-output.*
 
 CLAUDE.md.old
-.archive
 
 # Logs
-logs
 dev-debug.log
 
 # Testing
@@ -81,14 +78,9 @@ out/
 dist/
 *.tsbuildinfo
 
-# Python dependency management
-.uv/
 
 # Temporary upload directories
 uploads/
-
-# Debug test scripts
-debug_tests/
 
 # Logs directory
 logs/
@@ -97,10 +89,6 @@ logs/
 *.db
 *.sqlite
 *.sqlite3
-
-# Temporary scripts
-health_check.py
-scripts/update_*.py
 
 # Git worktrees
 worktrees/
@@ -114,9 +102,6 @@ worktrees/
 
 # Archived documentation (moved out of main repo)
 ARCHIVED_DOCS/
-docs/archive/
-repomix-output.*
-docs/prompts/mcp/**
 
 # Temporary documentation files
 *_SUMMARY.md
@@ -173,27 +158,12 @@ frontend/*.temp.*
 frontend/frontend*.xml
 
 # Additional generated/temporary files
-**/consolidate_*.sh
-**/migrate_*.sh
-**/analyze_*.sh
-**/temp_*.py
-**/debug_*.py
 **/test_debug.*
 **/*-temp.*
 **/*.backup.*
 **/*.bak
-**/.temp/
-**/temp/
-**/debug/
 
 # Documentation generation artifacts
-site/
-docs/site/
-.mkdocs/
-docs/openapi.json
-docs/swagger.json
-docs/openapi.yaml
-docs/swagger.yaml
 docs/**/temp/
 docs/**/*.backup
 docs/**/*-backup.*
@@ -231,6 +201,7 @@ benchmark-*.json
 **/junit.xml
 **/xunit.xml
 **/.vitest/
+**/.vitest-reports/
 **/vitest-*.json
 **/vitest-*.log
 
