refactor: enhance infrastructure validation in deploy workflow
- Updated the deploy workflow to include checks for both Supabase and Upstash environment variables.
- Improved conditional logic to ensure infrastructure validation runs only when necessary, enhancing deployment reliability.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,13 @@ jobs:
           UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
           UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
         run: |
-          if [ -n "$NEXT_PUBLIC_SUPABASE_URL" ]; then
+          has_supabase="${NEXT_PUBLIC_SUPABASE_URL:+1}"
+          has_upstash=""
+          if [ -n "$UPSTASH_REDIS_REST_URL" ] && [ -n "$UPSTASH_REDIS_REST_TOKEN" ]; then
+            has_upstash=1
+          fi
+
+          if [ -n "$has_supabase" ] || [ -n "$has_upstash" ]; then
             echo "Running infrastructure validation..."
             pnpm ops:check || echo "::warning::Infrastructure check failed (non-blocking)"
           else
