fix(core): api routes, telemetry guards, and type safety
- CI: Add missing -- separator before --reporter=github flag in Biome runner
- Config API: Replace z.uuid() with z.string().uuid() for Zod v4 compatibility
- Accommodations route test: Use vi.hoisted() for mock consistency
- Chat smoke test: Add explanatory comment for ChatClient mock
- Itineraries route: Remove duplicate userId property in agent creation
- Calendar telemetry: Fix context name from CardWrapper to Card
- Chat auth: Destructure both data and error from Supabase auth.getUser
- Planning schemas: Use UUID_V4 constant for planId consistency
- Query error boundary: Wrap telemetry in try-catch to prevent handler breaks
- Chat validation: Move schema parse inside telemetry span, derive type from schema
- Registry test: Replace unsafe cast with MockLanguageModelV3 from ai/test
- Map component: Add dev-only console.error and wrap telemetry in try-catch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Biome check (src + e2e + scripts)
         working-directory: frontend
-        run: pnpm biome:check --reporter=github
+        run: pnpm biome:check -- --reporter=github
 
       - name: TypeScript type check
         working-directory: frontend
