refactor(chat-client): streamline message handling and enhance error reporting
- Simplify message state update logic in ChatClient by directly appending optimistic user messages.
- Improve error handling by throwing the original error when message submission fails.
- Update gitleaks configuration to include additional test files in the allowlist.

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -3,8 +3,9 @@ title = "TripSage gitleaks configuration"
 [allowlist]
 description = "Ignore known example env templates and test env files"
 paths = [
-  "\.env\.example$",
-  "\.env\.test$",
-  "^supabase/.env\.example$"
+  "\\.env\\.example$",
+  "\\.env\\.test$",
+  "^supabase/\\.env\\.example$",
+  "frontend/src/components/chat/__tests__/message-item.test.ts"
 ]
 
