--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,7 @@
       "@domain/*": ["./src/domain/*"],
       "@ai/*": ["./src/ai/*"]
     },
+    "typeRoots": ["./@types", "./node_modules/@types"],
     "plugins": [
       {
         "name": "next"
