--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # TripSage Next.js + AI SDK v6 environment template (server-first)
+# WARNING: This file is a template only and must never be used as-is in production.
 # Replace placeholder values with your own secrets before running locally or deploying.
 
 # ---------------------------------------------------------------------------
@@ -21,13 +22,13 @@ NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-SUPABASE_JWT_SECRET=dev-jwt-secret-1234567890
+SUPABASE_JWT_SECRET=changeme-min-32-chars
 DATABASE_URL=postgresql://postgres:password@localhost:5432/postgres
 LOCAL_ANON_KEY=your-local-anon-key
 LOCAL_SERVICE_ROLE_KEY=your-local-service-role-key
 LOCAL_SUPABASE_URL=http://localhost:54321
 SUPABASE_PROJECT_REF=your-project-ref
-MFA_BACKUP_CODE_PEPPER=dev-backup-code-pepper-1234567890
+MFA_BACKUP_CODE_PEPPER=changeme-min-16-chars
 
 # ---------------------------------------------------------------------------
 # Upstash / QStash (HTTP-only)
