test: add integration tests for cache utilities and query keys
- Implemented integration tests for cache layer utilities including query cache and key utilities.
- Added tests for hash generation and canonicalization of parameters.
- Created tests for query key factories to ensure consistent key generation.
- Added edge case tests for cache key canonicalization and hash uniqueness.

refactor: improve URL handling in calendar and embedding modules

- Replaced custom URL resolution logic with centralized utility functions for client and server origins.
- Updated calendar integration to use `toClientAbsoluteUrl` for generating absolute URLs.
- Modified embedding generation to utilize `getServerOrigin` for API URL construction.

fix: enhance error handling in MFA client

- Introduced custom error class `MfaRequiredError` for better MFA enforcement handling.
- Updated MFA-related functions to throw specific errors when MFA is required.

chore: clean up environment variable handling in server origin resolution

- Refactored server origin resolution logic to improve clarity and error handling.
- Added logging for missing server origin configurations to aid in debugging.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -168,9 +168,6 @@
       "prismjs": ">=1.30.0",
       "brace-expansion": ">=2.0.2"
     },
-    "ignoredBuiltDependencies": [
-      "esbuild",
-      "msw"
-    ]
+    "ignoredBuiltDependencies": ["esbuild", "msw"]
   }
 }
