feat(search): enhance testing and functionality for search components
- Added a new `test:affected` script to identify affected tests based on changes in source files.
- Updated `handleRepeatSearch` and `getSearchTypeIcon` functions to improve type safety and return types.
- Enhanced `ActivitiesSearchClient` to manage comparison list size more effectively.
- Improved hotel search action to include currency handling and date formatting.
- Added error handling and telemetry assertions in flight search tests to ensure robust functionality.
- Introduced new tests for activity results and refined existing tests for search components, ensuring comprehensive coverage.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "test:upstash:int": "UPSTASH_USE_EMULATOR=1 vitest run --project=integration src/__tests__/contracts/upstash-int.integration.test.ts",
     "test:upstash:smoke": "UPSTASH_SMOKE=1 vitest run --project=integration src/__tests__/contracts/upstash.smoke.integration.test.ts",
     "test:changed": "vitest run --changed",
+    "test:affected": "vitest run --changed --passWithNoTests && vitest related $(git diff --name-only HEAD -- 'src/**/*.ts' 'src/**/*.tsx' ':!**/*.test.ts' ':!**/*.test.tsx') --run --passWithNoTests",
     "test:coverage:shard": "vitest run --coverage.enabled --coverage.provider=v8 --reporter=blob",
     "test:merge": "vitest run --merge-reports",
     "test:e2e": "playwright test",
