--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,12 @@ LOCAL_SUPABASE_URL=http://localhost:54321
 SUPABASE_PROJECT_REF=your-project-ref
 MFA_BACKUP_CODE_PEPPER=changeme-min-16-chars
 
+# Supabase vector tuning (pgvector/pg_cron)
+PGVECTOR_HNSW_M=32
+PGVECTOR_HNSW_EF_CONSTRUCTION=180
+PGVECTOR_HNSW_EF_SEARCH_DEFAULT=96
+MEMORIES_RETENTION_DAYS=180
+
 # ---------------------------------------------------------------------------
 # Upstash / QStash (HTTP-only)
 # ---------------------------------------------------------------------------
