--- a/.env.test.example
+++ b/.env.test.example
@@ -29,6 +29,12 @@ LOCAL_SUPABASE_URL=http://localhost:54321
 SUPABASE_PROJECT_REF=test-project-ref
 MFA_BACKUP_CODE_PEPPER=test-backup-code-pepper-123456
 
+# Supabase vector tuning (pgvector/pg_cron)
+PGVECTOR_HNSW_M=32
+PGVECTOR_HNSW_EF_CONSTRUCTION=180
+PGVECTOR_HNSW_EF_SEARCH_DEFAULT=96
+MEMORIES_RETENTION_DAYS=180
+
 # ---------------------------------------------------------------------------
 # Upstash / QStash (HTTP-only)
 # ---------------------------------------------------------------------------
