--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,10 +43,10 @@
     "boundary:check": "node scripts/check-boundaries.mjs"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "3.0.0-beta.70",
-    "@ai-sdk/openai": "3.0.0-beta.75",
-    "@ai-sdk/react": "3.0.0-beta.127",
-    "@ai-sdk/xai": "3.0.0-beta.48",
+    "@ai-sdk/anthropic": "3.0.0-beta.76",
+    "@ai-sdk/openai": "3.0.0-beta.87",
+    "@ai-sdk/react": "3.0.0-beta.140",
+    "@ai-sdk/xai": "3.0.0-beta.52",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
@@ -94,9 +94,9 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@upstash/qstash": "^2.8.4",
     "@upstash/ratelimit": "2.0.7",
-    "@upstash/redis": "^1.35.6",
+    "@upstash/redis": "^1.35.7",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.0-beta.127",
+    "ai": "6.0.0-beta.138",
     "amadeus": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -109,17 +109,17 @@
     "ical.js": "^2.2.1",
     "js-tiktoken": "^1.0.21",
     "libphonenumber-js": "^1.12.29",
-    "lucide-react": "^0.555.0",
+    "lucide-react": "^0.556.0",
     "mem0ai": "^2.1.38",
     "nanoid": "^5.1.6",
-    "next": "16.0.7",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.68.0",
     "react-syntax-highlighter": "^16.1.0",
-    "recharts": "^3.5.0",
+    "recharts": "^3.5.1",
     "resend": "^6.5.2",
     "streamdown": "^1.6.8",
     "stripe": "^20.0.0",
@@ -129,11 +129,11 @@
     "vaul": "^1.1.2",
     "web-vitals": "^5.1.0",
     "zod": "^4.1.13",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.7",
-    "@next/bundle-analyzer": "^16.0.3",
+    "@biomejs/biome": "^2.3.8",
+    "@next/bundle-analyzer": "^16.0.7",
     "@playwright/test": "^1.57.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -148,21 +148,21 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "@vitest/coverage-v8": "^4.0.14",
-    "@vitest/ui": "^4.0.14",
+    "@vitest/coverage-v8": "^4.0.15",
+    "@vitest/ui": "^4.0.15",
     "babel-plugin-react-compiler": "^1.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
-    "jose": "^6.1.2",
+    "jose": "^6.1.3",
     "jscodeshift": "^17.3.0",
     "jsdom": "^27.2.0",
     "jsondiffpatch": "^0.7.3",
-    "msw": "2.12.3",
+    "msw": "2.12.4",
     "semantic-release": "^25.0.2",
     "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.14"
+    "vitest": "^4.0.15"
   },
   "engines": {
     "node": "^24 || >=24",
