docs(env,adr-0042): document env var consumption in migrations and update implementation status
Update `.env.example` and `.env.test.example` to clarify that pgvector tuning env vars are consumed by `20251122000000_base_schema.sql` migration. Update ADR-0042 implementation status to reflect completed work:

- Config surface: base_schema.sql now parameterizes HNSW indexes and retention from env vars
- ef_search_override: implemented in match_accommodation_embeddings with env fallback
- Session-level locking

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ LOCAL_SUPABASE_URL=http://localhost:54321
 SUPABASE_PROJECT_REF=your-project-ref
 MFA_BACKUP_CODE_PEPPER=changeme-min-16-chars
 
-# Supabase vector tuning (pgvector/pg_cron)
+# Supabase vector tuning (pgvector/pg_cron) — consumed by 20251122000000_base_schema.sql
 PGVECTOR_HNSW_M=32
 PGVECTOR_HNSW_EF_CONSTRUCTION=180
 PGVECTOR_HNSW_EF_SEARCH_DEFAULT=96
