--- a/.env.test.example
+++ b/.env.test.example
@@ -1,9 +1,7 @@
 # TripSage test environment (.env.test)
 # Values are safe placeholders for running the automated test suite.
 
-# ---------------------------------------------------------------------------
-# Core URLs
-# ---------------------------------------------------------------------------
+# ---- Core URLs ------------------------------------------------------------
 NODE_ENV=test
 CI=false
 PORT=3000
@@ -15,9 +13,7 @@ NEXT_PUBLIC_APP_NAME=TripSage
 NEXT_PUBLIC_BASE_PATH=
 NEXT_PUBLIC_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
 
-# ---------------------------------------------------------------------------
-# Supabase
-# ---------------------------------------------------------------------------
+# ---- Supabase ------------------------------------------------------------
 NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
 NEXT_PUBLIC_SUPABASE_ANON_KEY=anon-test-key
 SUPABASE_SERVICE_ROLE_KEY=service-role-test
@@ -27,6 +23,8 @@ LOCAL_ANON_KEY=anon-test-key
 LOCAL_SERVICE_ROLE_KEY=service-role-test
 LOCAL_SUPABASE_URL=http://localhost:54321
 SUPABASE_PROJECT_REF=test-project-ref
+# Secret pepper used to hash/derive MFA backup codes; unique per deployment, ≥32 chars of randomness.
+# Keep it secret (not committed publicly) and rotate carefully if changed to avoid invalidating existing codes.
 MFA_BACKUP_CODE_PEPPER=test-backup-code-pepper-123456
 
 # Supabase vector tuning (pgvector/pg_cron) — consumed by 20251122000000_base_schema.sql
@@ -35,9 +33,7 @@ PGVECTOR_HNSW_EF_CONSTRUCTION=180
 PGVECTOR_HNSW_EF_SEARCH_DEFAULT=96
 MEMORIES_RETENTION_DAYS=180
 
-# ---------------------------------------------------------------------------
-# Upstash / QStash (HTTP-only)
-# ---------------------------------------------------------------------------
+# ---- Upstash / QStash (HTTP-only) -----------------------------------------
 UPSTASH_REDIS_REST_URL=https://test-redis.upstash.io
 UPSTASH_REDIS_REST_TOKEN=test-upstash-token
 QSTASH_TOKEN=test-qstash-token
@@ -53,9 +49,7 @@ QSTASH_NEXT_SIGNING_KEY=test-qstash-next
 # Optional: live smoke (used by test:upstash:smoke)
 #UPSTASH_SMOKE=1
 
-# ---------------------------------------------------------------------------
-# AI providers / gateway
-# ---------------------------------------------------------------------------
+# ---- AI providers / gateway ------------------------------------------------
 AI_GATEWAY_API_KEY=test-gateway-key
 AI_GATEWAY_URL=https://ai-gateway.vercel.sh/v1
 OPENAI_API_KEY=test-openai
@@ -64,28 +58,20 @@ ANTHROPIC_API_KEY=test-anthropic
 XAI_API_KEY=test-xai
 EMBEDDINGS_API_KEY=test-embeddings
 
-# ---------------------------------------------------------------------------
-# Search / crawling
-# ---------------------------------------------------------------------------
+# ---- Search / crawling -----------------------------------------------------
 FIRECRAWL_API_KEY=test-firecrawl-key
 FIRECRAWL_BASE_URL=https://api.firecrawl.dev/v2
 
-# ---------------------------------------------------------------------------
-# Maps / weather
-# ---------------------------------------------------------------------------
+# ---- Maps / weather --------------------------------------------------------
 GOOGLE_MAPS_SERVER_API_KEY=test-maps-server
 NEXT_PUBLIC_GOOGLE_MAPS_BROWSER_API_KEY=test-maps-browser
 OPENWEATHERMAP_API_KEY=test-weather
 
-# ---------------------------------------------------------------------------
-# Payments
-# ---------------------------------------------------------------------------
+# ---- Payments --------------------------------------------------------------
 STRIPE_SECRET_KEY=test-stripe-secret
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=test-stripe-pk
 
-# ---------------------------------------------------------------------------
-# Email / notifications
-# ---------------------------------------------------------------------------
+# ---- Email / notifications -------------------------------------------------
 RESEND_API_KEY=test-resend-key
 RESEND_FROM_EMAIL=noreply@test.local
 RESEND_FROM_NAME=TripSage QA
@@ -93,9 +79,7 @@ COLLAB_WEBHOOK_URL=
 HMAC_SECRET=test-hmac-secret
 MEM0_API_KEY=
 
-# ---------------------------------------------------------------------------
-# Travel APIs
-# ---------------------------------------------------------------------------
+# ---- Travel APIs -----------------------------------------------------------
 DUFFEL_ACCESS_TOKEN=test-duffel-token
 DUFFEL_API_KEY=test-duffel-key
 EPS_API_KEY=test-eps-key
@@ -107,21 +91,15 @@ AMADEUS_CLIENT_ID=test-amadeus-client-id
 AMADEUS_CLIENT_SECRET=test-amadeus-client-secret
 AMADEUS_ENV=test
 
-# ---------------------------------------------------------------------------
-# Analytics (optional)
-# ---------------------------------------------------------------------------
+# ---- Analytics (optional) --------------------------------------------------
 GOOGLE_ANALYTICS_ID=
 MIXPANEL_TOKEN=
 POSTHOG_HOST=https://app.posthog.com
 POSTHOG_KEY=
 
-# ---------------------------------------------------------------------------
-# App integration
-# ---------------------------------------------------------------------------
+# ---- App integration -------------------------------------------------------
 BACKEND_API_URL=http://localhost:8001
 
-# ---------------------------------------------------------------------------
-# Flags
-# ---------------------------------------------------------------------------
+# ---- Flags -----------------------------------------------------------------
 ANALYZE=false
 DEBUG=true
