``` fix(api,auth,test): implement planned BYOK error codes, MFA login flow, and destination normalization
- fix(keys): replace legacy error codes with planned GA-stable codes (VAULT_UNAVAILABLE, NETWORK_ERROR, INVALID_KEY); extract vaultUnavailableResponse helper and mapProviderStatusToCode/mapProviderExceptionToCode utilities; update all route handlers and tests to use planned codes
- feat(auth/login): add MFA challenge flow with isMfaRequiredError guard; handle insufficient_aal errors with 403

--- a/.env.test.example
+++ b/.env.test.example
@@ -74,7 +74,7 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=test-stripe-pk
 # ---- Email / notifications -------------------------------------------------
 RESEND_API_KEY=test-resend-key
 RESEND_FROM_EMAIL=noreply@test.local
-RESEND_FROM_NAME=TripSage QA
+RESEND_FROM_NAME="TripSage QA"
 COLLAB_WEBHOOK_URL=
 HMAC_SECRET=test-hmac-secret
 MEM0_API_KEY=
