docs: fix remaining legacy frontend/ path references
- Update .github/ci-config.yml cache paths (frontend/ → root)
- Update docs/index.md installation instructions
- Update docs/development/README.md workflow commands
- Update docs/development/mcp-servers/mcp-server-setup.md
- Update docs/development/troubleshooting.md release notes
- Update docs/operations/oauth-provider-setup-guide.md
- Fix broken reference in adr-0007 to point to current testing.md

All cd frontend commands removed; paths now use repository root.

Refs: ADR-0055

--- a/.github/ci-config.yml
+++ b/.github/ci-config.yml
@@ -59,12 +59,12 @@ cache:
   node:
     key_prefix: "node-pnpm"
     restore_keys:
-      - "node-pnpm-${{ runner.os }}-${{ hashFiles('frontend/pnpm-lock.yaml') }}"
+      - "node-pnpm-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}"
       - "node-pnpm-${{ runner.os }}-"
     paths:
       - "~/.pnpm-store"
-      - "frontend/node_modules"
-      - "frontend/.next/cache"
+      - "node_modules"
+      - ".next/cache"
   docker:
     key_prefix: "docker-buildx"
     registry: "ghcr.io"
