--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,34 +6,54 @@ on:
     paths:
       - 'src/**'
       - 'e2e/**'
+      - 'public/**'
       - 'scripts/**'
       - 'docs/**'
-      - 'docs/review/**'
       - '.github/workflows/**'
       - '.github/ci-config.yml'
       - '.pre-commit-config.yaml'
+      # Root config files (post-flattening)
       - 'package.json'
       - 'pnpm-lock.yaml'
       - 'tsconfig.json'
       - 'vitest.config.ts'
       - 'biome.json'
+      - 'next.config.ts'
+      - 'tailwind.config.mjs'
+      - 'postcss.config.mjs'
+      - 'playwright.config.ts'
+      - 'vercel.json'
+      - 'components.json'
+      - '.npmrc'
+      - '.nvmrc'
+      - 'Dockerfile*'
       - 'README.md'
   pull_request:
     branches: [main, develop]
     paths:
       - 'src/**'
       - 'e2e/**'
+      - 'public/**'
       - 'scripts/**'
       - 'docs/**'
-      - 'docs/review/**'
       - '.github/workflows/**'
       - '.github/ci-config.yml'
       - '.pre-commit-config.yaml'
+      # Root config files (post-flattening)
       - 'package.json'
       - 'pnpm-lock.yaml'
       - 'tsconfig.json'
       - 'vitest.config.ts'
       - 'biome.json'
+      - 'next.config.ts'
+      - 'tailwind.config.mjs'
+      - 'postcss.config.mjs'
+      - 'playwright.config.ts'
+      - 'vercel.json'
+      - 'components.json'
+      - '.npmrc'
+      - '.nvmrc'
+      - 'Dockerfile*'
       - 'README.md'
   workflow_dispatch: {}
 
