--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,15 +83,7 @@ jobs:
           pnpm install --frozen-lockfile
 
       - name: Cache Vite/Vitest/TS caches
-        uses: actions/cache@v4
-        with:
-          key: ${{ runner.os }}-vite-vitest-${{ hashFiles('pnpm-lock.yaml','vitest.config.ts','tsconfig.json','package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-vite-vitest-
-          path: |
-            node_modules/.vite
-            node_modules/.vitest
-            tsconfig.tsbuildinfo
+        uses: ./.github/actions/cache-vite-vitest
 
       - name: Biome check (src + e2e + scripts)
         run: pnpm biome:check -- --reporter=github
@@ -182,15 +174,7 @@ jobs:
           pnpm install --frozen-lockfile
 
       - name: Cache Vite/Vitest/TS caches
-        uses: actions/cache@v4
-        with:
-          key: ${{ runner.os }}-vite-vitest-${{ hashFiles('pnpm-lock.yaml','vitest.config.ts','tsconfig.json','package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-vite-vitest-
-          path: |
-            node_modules/.vite
-            node_modules/.vitest
-            tsconfig.tsbuildinfo
+        uses: ./.github/actions/cache-vite-vitest
 
       - name: Run sharded coverage (api+ui)
         env:
@@ -222,7 +206,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
-      - name: Install vitest
+      - name: Install dependencies
         run: |
           npm install -g pnpm@10.20.0
           pnpm install --frozen-lockfile
