chore: consolidate config files and update paths after frontend flatten
- Remove .eslintrc.json (rules now enforced via PR review per AGENTS.md)
- Remove .gitleaks.toml and security.yml workflow (redundant with GHAS)
- Move Dockerfile.dev to docker/ directory for consistency
- Update CODEOWNERS path for Dockerfile.dev
- Document import restrictions in AGENTS.md section 5.1

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -47,7 +47,7 @@ CLAUDE.md @BjornMelin
 # Infrastructure and deployment
 /docker/ @BjornMelin
 Dockerfile @BjornMelin
-Dockerfile.dev @BjornMelin
+/docker/Dockerfile.dev @BjornMelin
 docker-compose*.yml @BjornMelin
 .dockerignore @BjornMelin
 /supabase/ @BjornMelin
