feat(deps): replace @vercel/blob with file-type for MIME verification
- Remove @vercel/blob (replaced by Supabase Storage)
- Add file-type@19.6.0 for magic byte MIME type verification

MIME verification prevents malware disguised as allowed file types by
validating actual file content matches declared Content-Type.

--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     "@upstash/qstash": "^2.8.4",
     "@upstash/ratelimit": "2.0.7",
     "@upstash/redis": "^1.35.7",
-    "@vercel/blob": "^2.0.0",
     "@vercel/otel": "^2.1.0",
     "ai": "6.0.0-beta.138",
     "amadeus": "^11.0.0",
@@ -103,6 +102,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "file-type": "^19.6.0",
     "framer-motion": "12.23.24",
     "html-to-text": "^9.0.5",
     "i18n-iso-countries": "^7.14.0",
