chore(env): add Blob storage config and remove legacy BACKEND_API_URL
- Add BLOB_READ_WRITE_TOKEN and BLOB_PUBLIC_BASE_URL to .env.example
- Document Blob storage env vars in env-setup.md
- Remove BACKEND_API_URL from env schema (FastAPI backend retired)

Storage now uses Supabase directly; legacy backend proxy no longer needed.

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,12 @@ QSTASH_CURRENT_SIGNING_KEY=your-qstash-current-signing-key
 QSTASH_NEXT_SIGNING_KEY=your-qstash-next-signing-key
 
 # ---------------------------------------------------------------------------
+# Vercel Blob Storage (attachments)
+# ---------------------------------------------------------------------------
+BLOB_READ_WRITE_TOKEN=
+BLOB_PUBLIC_BASE_URL=
+
+# ---------------------------------------------------------------------------
 # AI providers / gateway
 # ---------------------------------------------------------------------------
 AI_GATEWAY_API_KEY=
