chore(env): document idempotency fail-open toggle

--- a/.env.example
+++ b/.env.example
@@ -44,8 +44,8 @@ UPSTASH_REDIS_REST_TOKEN=your-upstash-token
 QSTASH_TOKEN=your-qstash-token
 QSTASH_CURRENT_SIGNING_KEY=your-qstash-current-signing-key
 QSTASH_NEXT_SIGNING_KEY=your-qstash-next-signing-key
-# Set to false to fail closed when Redis is unavailable (idempotency keys)
-IDEMPOTENCY_FAIL_OPEN=true
+# Idempotency: set to "false" to fail closed when Redis is unavailable (default is fail-open)
+IDEMPOTENCY_FAIL_OPEN=false
 
 # ---------------------------------------------------------------------------
 # AI providers / gateway
