feat: integrate Vercel BotID for bot protection on chat and agent endpoints
- Add BotID security checks to chat and agent API routes (/api/chat, /api/chat/stream, /api/agents/router, /api/chat/attachments)
- Implement assertHumanOrThrow() helper in src/lib/security/botid.ts with BotDetectedError
- Configure botId guard in withApiGuards factory with guard execution order
- Add <BotIdClient> component to root layout with protected route list
- Update next.config.ts with proxy rewrites to prevent ad-blocker interference
- Add comprehensive test coverage in src/lib/security/__tests__/botid.test.ts
- Add ADR-0059 documenting BotID integration decision and rationale
- Add SPEC-0038 documenting BotID implementation details and configuration

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@vercel/otel": "^2.1.0",
     "ai": "6.0.0-beta.138",
     "amadeus": "^11.0.0",
+    "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
