--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "boundary:check": "node scripts/check-boundaries.mjs"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "3.0.0-beta.77",
-    "@ai-sdk/openai": "3.0.0-beta.87",
-    "@ai-sdk/react": "3.0.0-beta.140",
-    "@ai-sdk/xai": "3.0.0-beta.52",
+    "@ai-sdk/anthropic": "3.0.0-beta.81",
+    "@ai-sdk/openai": "3.0.0-beta.90",
+    "@ai-sdk/react": "3.0.0-beta.148",
+    "@ai-sdk/togetherai": "2.0.0-beta.48",
+    "@ai-sdk/xai": "3.0.0-beta.54",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
@@ -96,7 +97,7 @@
     "@upstash/ratelimit": "2.0.7",
     "@upstash/redis": "^1.35.7",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.0-beta.138",
+    "ai": "6.0.0-beta.145",
     "amadeus": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -110,10 +111,10 @@
     "ical.js": "^2.2.1",
     "js-tiktoken": "^1.0.21",
     "libphonenumber-js": "^1.12.29",
-    "lucide-react": "^0.556.0",
+    "lucide-react": "^0.560.0",
     "mem0ai": "^2.1.38",
     "nanoid": "^5.1.6",
-    "next": "^16.0.7",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -145,7 +146,7 @@
     "@types/html-to-text": "^9.0.4",
     "@types/jscodeshift": "^17.3.0",
     "@types/luxon": "^3.7.1",
-    "@types/node": "24.10.2",
+    "@types/node": "25.0.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -157,7 +158,7 @@
     "jscodeshift": "^17.3.0",
     "jsdom": "^27.2.0",
     "jsondiffpatch": "^0.7.3",
-    "msw": "2.12.4",
+    "msw": "^2.12.4",
     "semantic-release": "^25.0.2",
     "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
