--- a/package.json
+++ b/package.json
@@ -189,6 +189,10 @@
       "undici": "5.29.0",
       "brace-expansion": ">=2.0.2"
     },
+    "overridesMeta": {
+      "axios": "Pinned to latest axios to pick up CVE-2025-58754 (DoS via data: URL) and CVE-2025-27152 fixes; added 2025-12-11 by Bjorn Melin. Advisory: https://nvd.nist.gov/vuln/detail/CVE-2025-58754. Verified via `pnpm why axios` (mem0ai only) and `pnpm audit` clean.",
+      "undici": "Pinned to undici 5.29.0 for CVE-2025-47279 fix; added 2025-12-11 by Bjorn Melin. Advisory: https://github.com/nodejs/undici/security/advisories/GHSA-qcxv-8h49-rc89. Verified via `pnpm why undici` (qdrant/semantic-release) and `pnpm audit` clean."
+    },
     "ignoredBuiltDependencies": [
       "esbuild",
       "msw"
