chore(deps): restore pnpm peer config and document overrides

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,6 @@
 public-hoist-pattern[]=*sharp*
 # @tailwindcss/oxide: Required by @tailwindcss/postcss (Tailwind CSS v4)
 public-hoist-pattern[]=*@tailwindcss/oxide*
+
+# Do not auto-install peers (avoids pulling unused native/tooling chains).
+auto-install-peers=false
