--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "boundary:check": "node scripts/check-boundaries.mjs"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "3.0.0-beta.70",
-    "@ai-sdk/openai": "3.0.0-beta.75",
-    "@ai-sdk/react": "3.0.0-beta.127",
-    "@ai-sdk/togetherai": "2.0.0-beta.48",
-    "@ai-sdk/xai": "3.0.0-beta.48",
+    "@ai-sdk/anthropic": "3.0.0-beta.83",
+    "@ai-sdk/openai": "3.0.0-beta.95",
+    "@ai-sdk/react": "3.0.0-beta.151",
+    "@ai-sdk/togetherai": "2.0.0-beta.49",
+    "@ai-sdk/xai": "3.0.0-beta.55",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@icons-pack/react-simple-icons": "^13.8.0",
@@ -63,33 +63,33 @@
     "@opentelemetry/semantic-conventions": "^1.38.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@supabase/postgrest-js": "^2.84.0",
+    "@supabase/postgrest-js": "^2.87.1",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.84.0",
-    "@tanstack/react-query": "^5.90.11",
+    "@supabase/supabase-js": "^2.87.1",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@testing-library/react": "^16.3.0",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -97,36 +97,36 @@
     "@upstash/ratelimit": "2.0.7",
     "@upstash/redis": "^1.35.7",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.0-beta.127",
+    "ai": "6.0.0-beta.148",
     "amadeus": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "file-type": "^19.6.0",
-    "framer-motion": "12.23.24",
+    "file-type": "^21.1.1",
+    "framer-motion": "12.23.26",
     "html-to-text": "^9.0.5",
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
     "js-tiktoken": "^1.0.21",
-    "libphonenumber-js": "^1.12.29",
+    "libphonenumber-js": "^1.12.31",
     "lucide-react": "^0.560.0",
     "mem0ai": "^2.1.38",
     "motion": "^12.23.26",
     "nanoid": "^5.1.6",
-    "next": "^16.0.9",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.0",
-    "react-is": "^19.2.3",
     "react-hook-form": "^7.68.0",
+    "react-is": "^19.2.3",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.5.1",
-    "resend": "^6.5.2",
+    "resend": "^6.6.0",
     "shiki": "^3.19.0",
-    "streamdown": "^1.6.8",
+    "streamdown": "^1.6.10",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
@@ -138,11 +138,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
-    "@next/bundle-analyzer": "^16.0.7",
+    "@next/bundle-analyzer": "^16.0.10",
     "@playwright/test": "^1.57.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
@@ -150,21 +150,21 @@
     "@types/html-to-text": "^9.0.4",
     "@types/jscodeshift": "^17.3.0",
     "@types/luxon": "^3.7.1",
-    "@types/node": "25.0.0",
+    "@types/node": "25.0.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-v8": "^4.0.15",
     "@vitest/ui": "^4.0.15",
     "babel-plugin-react-compiler": "^1.0.0",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "jose": "^6.1.3",
     "jscodeshift": "^17.3.0",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.3.0",
     "jsondiffpatch": "^0.7.3",
     "msw": "^2.12.4",
     "semantic-release": "^25.0.2",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
@@ -211,6 +211,9 @@
       "undici": "5.29.0",
       "brace-expansion": ">=2.0.2"
     },
-    "ignoredBuiltDependencies": ["esbuild", "msw"]
+    "ignoredBuiltDependencies": [
+      "esbuild",
+      "msw"
+    ]
   }
 }
