fix(deps): add unified as direct dependency for type resolution
The `unified` module was imported for the `Plugin` type in
streamdown-config.ts but only existed as a transitive dependency
through streamdown. TypeScript couldn't resolve types from indirect
dependencies, causing CI type-check to fail.

--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "unified": "^11.0.5",
     "vitest": "^4.0.15"
   },
   "engines": {
