--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "3.0.0-beta.83",
-    "@ai-sdk/openai": "3.0.0-beta.95",
-    "@ai-sdk/react": "3.0.0-beta.151",
+    "@ai-sdk/openai": "3.0.0-beta.96",
+    "@ai-sdk/react": "3.0.0-beta.153",
     "@ai-sdk/togetherai": "2.0.0-beta.49",
     "@ai-sdk/xai": "3.0.0-beta.55",
     "@hello-pangea/dnd": "^18.0.1",
@@ -92,12 +92,11 @@
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@testing-library/react": "^16.3.0",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "@upstash/qstash": "^2.8.4",
     "@upstash/ratelimit": "2.0.7",
     "@upstash/redis": "^1.35.7",
     "@vercel/otel": "^2.1.0",
-    "ai": "6.0.0-beta.148",
+    "ai": "6.0.0-beta.150",
     "amadeus": "^11.0.0",
     "botid": "^1.5.10",
     "class-variance-authority": "^0.7.1",
@@ -105,14 +104,13 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "file-type": "^21.1.1",
-    "framer-motion": "12.23.26",
     "html-to-text": "^9.0.5",
+    "import-in-the-middle": "^2.0.0",
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
     "js-tiktoken": "^1.0.21",
-    "libphonenumber-js": "^1.12.31",
-    "lucide-react": "^0.560.0",
+    "lucide-react": "^0.561.0",
     "mem0ai": "^2.1.38",
     "motion": "^12.23.26",
     "nanoid": "^5.1.6",
@@ -122,16 +120,14 @@
     "react-dom": "^19.2.3",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.68.0",
-    "react-is": "^19.2.3",
-    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.5.1",
+    "require-in-the-middle": "^8.0.1",
     "resend": "^6.6.0",
     "shiki": "^3.19.0",
     "streamdown": "^1.6.10",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "use-stick-to-bottom": "^1.1.1",
-    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "web-vitals": "^5.1.0",
     "zod": "^4.1.13",
@@ -198,13 +194,16 @@
         "@types/jest",
         "@types/pg",
         "@types/sqlite3",
+        "@valibot/to-json-schema",
         "cloudflare",
+        "effect",
         "groq-sdk",
         "neo4j-driver",
         "ollama",
         "pg",
         "redis",
-        "sqlite3"
+        "sqlite3",
+        "valibot"
       ]
     },
     "overrides": {
