--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -90,7 +89,6 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
     "@tanstack/react-query": "^5.90.12",
-    "@tanstack/react-query-devtools": "^5.91.1",
     "@testing-library/react": "^16.3.0",
     "@upstash/qstash": "^2.8.4",
     "@upstash/ratelimit": "2.0.7",
@@ -105,10 +103,10 @@
     "date-fns": "^4.1.0",
     "file-type": "^21.1.1",
     "html-to-text": "^9.0.5",
-    "import-in-the-middle": "^2.0.0",
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
+    "import-in-the-middle": "^2.0.0",
     "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.561.0",
     "mem0ai": "^2.1.38",
@@ -123,6 +121,7 @@
     "require-in-the-middle": "^8.0.1",
     "resend": "^6.6.0",
     "shiki": "^3.19.0",
+    "sonner": "^2.0.7",
     "streamdown": "^1.6.10",
     "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
@@ -139,6 +138,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
