refactor: standardize timeouts, remove unused deps, and improve test/mock patterns
- Add visibilityTimeoutMs constant in dashboard E2E test and replace hardcoded 15000ms timeouts
- Replace navigationTimeoutMs in logout flow waitForURL calls for consistency
- Remove import-in-the-middle and require-in-the-middle unused dependencies
- Simplify test scripts by removing --pool=threads and --maxWorkers flags, use NODE_OPTIONS for memory
- Refactor test:affected to use xargs -0 -r instead of shell conditional

--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "biome:check": "biome check ./src ./e2e ./scripts",
     "biome:fix": "biome check ./src ./e2e ./scripts --fix",
     "type-check": "tsc --noEmit",
-    "test": "vitest run --pool=threads --maxWorkers=2 --execArgv=--max-old-space-size=4096",
+    "test": "NODE_OPTIONS='--max-old-space-size=4096' vitest run",
     "test:run": "vitest run",
     "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8",
     "test:benchmark": "node scripts/run-benchmark.mjs",
     "test:quick": "vitest run --reporter=dot",
-    "test:ci": "vitest run --pool=threads --maxWorkers=2 --execArgv=--max-old-space-size=4096 --reporter=dot",
-    "test:dev-fast": "vitest --pool=threads --maxWorkers=50% --reporter=default",
+    "test:ci": "NODE_OPTIONS='--max-old-space-size=4096' vitest run --reporter=dot",
+    "test:dev-fast": "vitest --reporter=default",
     "test:unit": "vitest run --project=unit",
     "test:components": "vitest run --project=component",
     "test:api": "vitest run --project=api",
@@ -29,7 +29,7 @@
     "test:upstash:int": "UPSTASH_USE_EMULATOR=1 vitest run --project=integration src/__tests__/contracts/upstash-int.integration.test.ts",
     "test:upstash:smoke": "UPSTASH_SMOKE=1 vitest run --project=integration src/__tests__/contracts/upstash.smoke.integration.test.ts",
     "test:changed": "vitest run --changed",
-    "test:affected": "vitest run --changed --passWithNoTests && { FILES=$(git diff --name-only HEAD -- 'src/**/*.ts' 'src/**/*.tsx' ':!**/*.test.ts' ':!**/*.test.tsx' | tr '\\n' ' '); [ -z \"$FILES\" ] || vitest related $FILES --run --passWithNoTests; }",
+    "test:affected": "vitest run --changed --passWithNoTests && git diff -z --name-only HEAD -- 'src/**/*.ts' 'src/**/*.tsx' ':!**/*.test.ts' ':!**/*.test.tsx' | xargs -0 -r vitest related --run --passWithNoTests",
     "test:coverage:shard": "vitest run --coverage.enabled --coverage.provider=v8 --reporter=blob",
     "test:merge": "vitest run --merge-reports",
     "test:e2e": "playwright test",
@@ -106,7 +106,6 @@
     "i18n-iso-countries": "^7.14.0",
     "ical-generator": "^10.0.0",
     "ical.js": "^2.2.1",
-    "import-in-the-middle": "^2.0.0",
     "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.561.0",
     "mem0ai": "^2.1.38",
@@ -118,7 +117,6 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.68.0",
     "recharts": "^3.6.0",
-    "require-in-the-middle": "^8.0.1",
     "resend": "^6.6.0",
     "shiki": "^3.20.0",
     "sonner": "^2.0.7",
