refactor: remove unnecessary resolveSupabaseClient wrapper
Replace the trivial resolveSupabaseClient wrapper function with direct
getBrowserClient() calls in onSubmit and toggleAdditionalSetting.
The wrapper added no value and obscured the actual client resolution.

- Remove resolveSupabaseClient function definition
- Call getBrowserClient() directly at lines 108 and 175
- Simplify code while maintaining identical behavior

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:coverage": "vitest run --coverage.enabled --coverage.provider=v8",
     "test:benchmark": "node scripts/run-benchmark.mjs",
     "test:quick": "vitest run --reporter=dot",
-    "test:ci": "NODE_OPTIONS='--max-old-space-size=4096' vitest run --reporter=dot",
+    "test:ci": "NODE_OPTIONS='--max-old-space-size=4096' vitest run --maxWorkers=2 --reporter=dot",
     "test:dev-fast": "vitest --reporter=default",
     "test:unit": "vitest run --project=unit",
     "test:components": "vitest run --project=component",
